// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WizardNavigation renders the default structure correctly 1`] = `
<div
  className="wizard-navigation"
/>
`;

exports[`WizardNavigation renders with children 1`] = `
<div
  className="wizard-navigation"
>
  <div>
    My Child
  </div>
</div>
`;
